# Thomisidae

./: .gitignore  Cargo.toml  README.md  config.toml  stdin.pipe  stdin.txt
.github/workflows/: rust.yml
benches/: extract_bench.rs
benches/data/: README.md  blog.html  docs.html  news.html
src/: config.rs  environment.rs  initialize.rs  lib.rs  main.rs  response.rs  tool_meta.rs  tools.rs
src/server/: error.rs  io.rs  mod.rs  rpc.rs  setup.rs  state.rs  transport.rs
src/tools/: fetch_links.rs  fetch_text.rs  google_search.rs  meta.rs  mod.rs  policy.rs  robots.rs  utils.rs
src/tools/fetch_text/: chunk.rs  content.rs  extractors.rs  handler.rs  mod.rs  schema.rs
