[package]
name = "thomisidae"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "stream"] }
scraper = "0.24"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
mcp-protocol-sdk = "0.5"
serde_json = "1"
async-trait = "0.1"
jsonrpc-v2 = "0.13.0"
url = "2"
toml = "0.9"
futures-util = "0.3"
dotenvy = "0.15"
robotstxt = "0.3"
htmd = "0.3"
ammonia = "4"
chardetng = "0.1"
encoding_rs = "0.8"

[features]
default = []
# Optional: enable a more advanced readability extraction mode
readability = ["dep:readability"]

[dependencies.readability]
version = "0.2"
optional = true

 
